Fixed stretched out banner

--- a/css/league.css
+++ b/css/league.css
@@ -81,7 +81,7 @@
   border: 2px solid black;
   background-color: Transparent;
   color: white;
-  padding: 15px 15px;
+  padding: 5px 5px;
   font-size: 16px;
   cursor: pointer;
   text-align: center;
